--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,25 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+
+.background {
+  max-width: 100%;
+  height: auto;
+}
+
+#hp-pic {
+  position: static;
+}
+
+#hp-text {
+  position: absolute;
+  text-align: center;
+  font-size: large;
+  top: 20%;
+  left: 10%;
+  right: 10%;
+  padding: 2%;
+  padding-left: 15%;
+  background-color: white;
+  border: 2px solid black
+}
