--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,12 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
-
+body {
+  background-color: #a1bef3;
+}
 .background {
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -15,12 +18,12 @@ form.login {
 #hp-text {
   position: absolute;
   text-align: center;
-  font-size: large;
-  top: 20%;
-  left: 10%;
-  right: 10%;
+  top: 25%;
+  left: 15%;
+  right: 15%;
   padding: 2%;
   padding-left: 15%;
+  padding-right: 15%;
   background-color: white;
   border: 2px solid black
 }
