--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,9 @@ form.login {
 }
 
 body {
-  background-color: cornflowerblue;
+  background-color: #a1bef3;
+  font-family: 'Yusei Magic', sans-serif;
+  color: midnightblue;
 }
 
 .bg-warning {
@@ -19,12 +21,17 @@ body {
   background-color: lightgoldenrodyellow;
 }
 
-.btn-primary {
-  background-color: darkblue;
+.bg-primary {
+  background-color: darkblue !important;
+  border: 5px solid black;
 }
 
 .rounded-top {
   border-radius: 25px 25px 0 0 !important;
+}
+
+.roundedImportant {
+  border-radius: 20px !important;
 }
 
 .borderTopSides {
@@ -65,8 +72,14 @@ body {
   margin-right: auto;
 }
 
+#regLogo {
+  display: block;
+  width: 125px;
+}
+
 .background {
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -77,12 +90,12 @@ body {
 #hp-text {
   position: absolute;
   text-align: center;
-  font-size: large;
-  top: 20%;
-  left: 10%;
-  right: 10%;
+  top: 25%;
+  left: 15%;
+  right: 15%;
   padding: 2%;
   padding-left: 15%;
+  padding-right: 15%;
   background-color: white;
   border: 2px solid black
 }
