--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,16 @@ form.login {
   margin-top: 50px;
 }
 
+.indexLogo {
+    position: absolute;
+    max-width: 40%;
+    height: auto;
+    margin-top: 5%;
+    margin-right: 10%;
+    margin-left: 30%;
+}
+
+
 body {
   background-color: #a1bef3;
   font-family: 'Yusei Magic', sans-serif;
@@ -93,12 +103,23 @@ body {
 #hp-text {
   position: absolute;
   text-align: center;
-  top: 25%;
+  overflow: auto;
+  top: 35%;
   left: 15%;
   right: 15%;
   padding: 2%;
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 5%;
+  padding-right: 5%;
   background-color: white;
   border: 2px solid black
+}
+
+.hp {
+  position: relative;
+  max-width: 100%;
+  height: auto;
+}
+
+.cardStyle {
+  background-color: #0dcaf0;
 }
