--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,103 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+
+body {
+  background-color: #a1bef3;
+  font-family: 'Yusei Magic', sans-serif;
+  color: midnightblue;
+
+}
+
+.bg-warning {
+  background-color: khaki !important;
+}
+
+.bg-light {
+  background-color: lightyellow !important;
+}
+
+.bg-light2 {
+  background-color: lightgoldenrodyellow;
+}
+
+.bg-primary {
+  background-color: darkblue !important;
+  border: 5px solid black;
+}
+
+.rounded-top {
+  border-radius: 25px 25px 0 0 !important;
+}
+
+.roundedImportant {
+  border-radius: 20px !important;
+}
+
+.borderTopSides {
+  border-top: 5px solid gold;
+  border-right: 5px solid gold;
+  border-left: 5px solid gold;
+}
+
+.borderTop {
+  border-top: 5px solid gold;
+}
+
+.borderTopLight {
+  border-top: 5px solid lightyellow;
+}
+
+.borderSides {
+  border-right: 5px solid gold;
+  border-left: 5px solid gold;
+}
+
+.borderTopExtraLight {
+  border-top: 3px solid white;
+  border-right: 3px solid white;
+  border-left: 3px solid white;
+}
+
+.borderExtraLight {
+  border-right: 3px solid white;
+  border-left: 3px solid white;
+  border-bottom: 3px solid white;
+}
+
+#signUpLogo {
+  display: block;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+#regLogo {
+  display: block;
+  width: 125px;
+}
+
+
+.background {
+  height: 100%;
+  width: 100%;
+  height: auto;
+}
+
+#hp-pic {
+  position: static;
+}
+
+#hp-text {
+  position: absolute;
+  text-align: center;
+  top: 25%;
+  left: 15%;
+  right: 15%;
+  padding: 2%;
+  padding-left: 15%;
+  padding-right: 15%;
+  background-color: white;
+  border: 2px solid black
+}
