finished post request from createTask.html

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -191,9 +191,9 @@ a {
   color: inherit !important;
 }
 
-/* #markup-container {
+#markup-container {
   min-height: 500px;
-} */
+}
 
 #vacuumPic {
   width: 35%;
