--- a/views/partials/lowTaskCard.handlebars
+++ b/views/partials/lowTaskCard.handlebars
@@ -1,13 +1,15 @@
-<div class="desc">
-    <div class="title">{{taskTitle}}</div>
-    <div>{{taskDescription}}</div>
-    <div class="points">{{taskValue}} points</div>
-</div>
-<div class="time">
-    <div class="date">{{dueDate}}</div>
-    <div>{{timeDue}}</div>
-    <div class="form-check">
-        <label class="form-check-label" for="flexCheckDefault">completed</label>
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+<div class="task low">
+    <div class="desc">
+        <div class="title">{{taskTitle}}</div>
+        <div>{{taskDescription}}</div>
+        <div class="points">{{taskValue}} points</div>
+    </div>
+    <div class="time">
+        <div class="date">{{dueDate}}</div>
+        <div>{{timeDue}}</div>
+        <div class="form-check">
+            <label class="form-check-label" for="flexCheckDefault">completed</label>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"/>
+        </div>
     </div>
 </div>
