got the redirecting to work and no longer receiving 401 errors upon login

--- a/views/viewPrizes.handlebars
+++ b/views/viewPrizes.handlebars
@@ -3,6 +3,7 @@
       <a class="navbar-brand" href="#">
         <img src="./assets/images/Strive Rite.png" alt="Strive Rite Logo"width="150" class="height-auto">
       </a>
+      <a href="/logout" style="color:inherit;">Sign out</a>
     </div>
   </nav>
   <div class="container mt-3">
