--- a/views/viewTasks.handlebars
+++ b/views/viewTasks.handlebars
@@ -22,15 +22,15 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Tasks
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">View Tasks</a></li>
-                    <li><a class="dropdown-item" href="#">Assign New Task</a></li>
+                    <li><a class="dropdown-item" href="/view_tasks">View Tasks</a></li>
+                    <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -38,8 +38,8 @@
                     Prizes
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">View Prizes</a></li>
-                    <li><a class="dropdown-item" href="#">Add New Prize</a></li>
+                    <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
+                    <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
                   </ul>
                 </li>
               </ul>
