--- a/views/viewPrizes.handlebars
+++ b/views/viewPrizes.handlebars
@@ -21,15 +21,15 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Tasks
                     </a>
                     <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">View Tasks</a></li>
-                      <li><a class="dropdown-item" href="#">Assign New Task</a></li>
+                      <li><a class="dropdown-item" href="/view_tasks">View Tasks</a></li>
+                      <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -37,8 +37,8 @@
                       Prizes
                     </a>
                     <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">View Prizes</a></li>
-                      <li><a class="dropdown-item" href="#">Add New Prize</a></li>
+                      <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
+                      <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -54,14 +54,8 @@
             <div class="col-12 col-sm-12 col-md-12 mt-4">
               <div class="row g-3 align-items-center">
                 <div class="col-sm-12 col-lg-auto ">
-                    <h5>Search Amazon for Prizes!</h5>
+                    <h5>Here are your saved prizes!</h5>
                 </div>
-                <div class="col-10 col-sm-auto mb-1">
-                  <input type="search" id="inputSearch" class="form-control" placeholder="Search">
-                </div>
-                <button type="button" id="search" class="btn btn-danger col-auto mb-1">
-                    <i class="fas fa-search"></i>
-                </button>
               </div>
             </div>
           </div>
