Official mvp is done needs some async work. Sometimes pages load before the data is available

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,10 @@ body {
 
 }
 
+.hide {
+  display: none;
+}
+
 .bg-warning {
   background-color: khaki !important;
 }
@@ -360,7 +364,7 @@ h1 {
 }
 
 .page-todo .task .time .date {
-    font-size: 18px;
+    font-size: 14px;
     margin-bottom: 5px
 }
 
