--- a/views/partials/childCard.handlebars
+++ b/views/partials/childCard.handlebars
@@ -4,9 +4,9 @@
       <h5 class="card-title">{{name}}</h5>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Points Earned: {{totalPoints}}</li>
-      <li class="list-group-item">Tasks Completed: {{completeCount}} </li>
-      <li class="list-group-item">Tasks Assigned: {{taskCount}} </li>
+      <li class="list-group-item">Points Earned: {{points}}</li>
+      <li class="list-group-item">Tasks Completed: {{tasksCompleted}} </li>
+      <li class="list-group-item">Tasks Assigned: {{tasksAssigned}} </li>
     </ul>
   </div>
 </div>
