--- a/views/viewTasks.handlebars
+++ b/views/viewTasks.handlebars
@@ -21,53 +21,77 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Tasks
-                  </a>
-                  <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/view_tasks">View Tasks</a></li>
-                    <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Prizes
-                  </a>
-                  <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
-                    <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
-                  </ul>
-                </li>
+                {{#if isParent}}
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
+                  </li>
+                  {{/if}}
+                  {{#if isParent}}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Tasks
+                    </a>
+                    <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="/pending_tasks">View Tasks Awaiting Approval</a></li>
+                      <li><a class="dropdown-item" href="/view_tasks">View Incomplete Tasks</a></li>
+                      <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
+                    </ul>
+                  </li>
+                  {{/if}}
+                  {{#unless isParent}}
+                  <li class="nav-item"><a class="nav-link active" href="/view_tasks">View Tasks</a></li>
+                  {{/unless}}
+                  {{#if isParent}}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Prizes
+                    </a>
+                    <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
+                      <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
+                    </ul>
+                  </li>
+                  {{/if}}
+                  {{#unless isParent}}
+                    <li class="nav-item"><a class="nav-link active" href="/view_rewards">View Rewards</a></li>
+                  {{/unless}}
               </ul>
             </div>
           </div>
         </nav>
-        <div class="page-todo ms-3">
-          <div class="tasks">
-              <div class="task-list overflow-auto">
-                  <h1>{{ name }}'s Tasks</h1>
-                  <div class="priority high"><span>high priority</span></div>
-                  {{#each highPriority}}
-                  {{> highTaskCard}}
-                  {{/each}}
-                  <br>
-                  <div class="priority medium"><span>medium priority</span></div>
-                  {{#each mediumPriority}}
-                  {{> mediumTaskCard}}
-                  {{/each}}
-                  <br>
-                  <div class="priority low"><span>low priority</span></div>
-                  {{#each lowPriority}}
-                  {{> lowTaskCard}}
-                  {{/each}}
-                  <div class="clearfix"></div>		
-              </div>		
+        
+          <div class="page-todo ms-3">
+            {{#each children}}
+            <div class="tasks">
+                <div class="task-list">
+                    <h1>{{ name }}'s Incomplete Tasks</h1>
+                    <p>Total Points: {{points}}</p>
+                    <div class="priority high high-tasks"><span>high priority</span></div>
+                    {{#each sortedHigh}}
+                    {{#unless completed}}
+                    {{> highTaskCard}}
+                    {{/unless}}
+                    {{/each}}
+                    <br>
+                    <div class="priority medium medium-tasks"><span>medium priority</span></div>
+                    {{#each sortedMedium}}
+                    {{#unless completed}}
+                    {{> mediumTaskCard}}
+                    {{/unless}}
+                    {{/each}}
+                    <br>
+                    <div class="priority low low-tasks"><span>low priority</span></div>
+                    {{#each sortedLow}}
+                    {{#unless completed}}
+                    {{> lowTaskCard}}
+                    {{/unless}}
+                    {{/each}}
+                    <div class="clearfix"></div>		
+                </div>		
+            </div>
+            {{/each}}
           </div>
-          </div>
+        
       </div>
   </div>
 
