--- a/views/viewPrizes.handlebars
+++ b/views/viewPrizes.handlebars
@@ -67,7 +67,7 @@
             <div class="col-12 col-sm-12 col-md-12 mt-4">
               <div class="row g-3 align-items-center">
                 <div class="col-sm-12 col-lg-auto ">
-                    <h5>Here are your saved prizes!</h5>
+                    <h5>Here are your saved prizes! {{#unless isParent }}You have {{childPoints}} points.{{/unless}}</h5>
                 </div>
               </div>
             </div>
