--- a/views/partials/lowTaskCard.handlebars
+++ b/views/partials/lowTaskCard.handlebars
@@ -10,7 +10,7 @@
     <div class="time">
         <div class="date">{{dataValues.date}}</div>
         <div>{{dataValues.time}}</div>
-        {{#if dataValules.completed}}
+        {{#if dataValues.completed}}
         <button id="{{dataValues.id}}" class="btn btn-success confirm">Confirm</button>
         {{/if}}
         {{#unless dataValues.completed}}
