--- a/views/partials/prizeCard.handlebars
+++ b/views/partials/prizeCard.handlebars
@@ -1,4 +1,4 @@
-<div class="card m-2" style="width: 18rem;">
+<div class="card m-2 height-fluid" style="width: 17rem;">
     <img src="{{'Rewards.image'}}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">{{'Rewards.title'}}</h5>
