saved prizes page doesnt look right on phone. trying to fix it. doesn't look like dev tools says it will

--- a/views/partials/prizeCard.handlebars
+++ b/views/partials/prizeCard.handlebars
@@ -1,4 +1,4 @@
-<div class="card m-2 height-fluid" style="width: 17rem;">
+<div class="card m-2 height-fluid" style="width: 17rem; min-height: fit-content;">
     <img src="{{'Rewards.image'}}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">{{'Rewards.title'}}</h5>
