--- a/views/noAccessPage.handlebars
+++ b/views/noAccessPage.handlebars
@@ -22,26 +22,14 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link" href="/view_tasks" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Tasks
                   </a>
-                  <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/pending_tasks">View Tasks Awaiting Approval</a></li>
-                    <li><a class="dropdown-item" href="/view_tasks">View Incomplete Tasks</a></li>
-                    <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
-                  </ul>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Prizes
+                <li class="nav-item">
+                  <a class="nav-link" href="/view_rewards" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Rewards
                   </a>
-                  <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
-                    <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
-                  </ul>
                 </li>
               </ul>
             </div>
